# torrent-client

./: .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml
app/: models.py  parser.py  torrent.py
app/parser/: __init__.py  models.py  parser.py
app/torrent/: __init__.py  torrent.py
app/tracker/: __init__.py  models.py  tracker.py
