[tool.poetry]
name = "torrent-client"
version = "0.1.0"
description = "Console torrent clinet"
authors = ["Kazantsev Artem <me@lokach.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.ruff]
select = ["F", "E", "W", "I", "N", "PL", "C", "B", "D"]

# Same as Black.
line-length = 89
