[tool.poetry]
name = "torrent-client"
version = "0.1.0"
description = "Console torrent clinet"
authors = ["Kazantsev Artem <me@lokach.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
bencode-py = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 89
include = '\.pyi?$'

[tool.ruff]
select = ["F", "E", "W", "I", "N", "PL", "C", "B", "D"]

# Same as Black.
line-length = 89
